# pangocffi

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  CONTRIBUTING.rst  MANIFEST.in  Makefile  NEWS.rst  Progress.rst  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml  coverage.yml  lint.yml  pip-outdated-test.yml  pip-outdated.yml  publish.yml  test.yml  tests.yml
docs/: Makefile  api.rst  binding-progress.rst  cffi-api.rst  cffi_api.rst  changelog.rst  conf.py  contributing.rst  index.rst  modules.rst  overview.rst  pangocffi.rst  rendering-pango.rst
pangocffi/: __init__.py  attr_list.py  attribute.py  attributes.py  c_definitions_glib.txt  c_definitions_pango.txt  cdefs.txt  cdefs_pango.txt  color.py  constants.py  context.py  convert.py  enums.py  ffi_build.py  ffi_instance_builder.py  font.py  font_description.py  font_metrics.py  glyph_item.py  glyph_item_iter.py  item.py  language.py  layout.py  layout_iter.py  layout_iterator.py  layout_run.py  pango_object.py  rectangle.py  tab_array.py  version.py
tests/: context_creator.py  test_pangocffi.py
tests/acceptance/: context_creator.py  test_attributes.py  test_end_to_end.py  test_tab_array.py
tests/functional/: context_creator.py  test_add_font_file.py  test_attr_list.py  test_attribute.py  test_attributes.py  test_attrlist.py  test_color.py  test_colors.py  test_context.py  test_convert.py  test_ffi_instance_builder.py  test_font_description.py  test_font_metrics_with_context.py  test_font_with_context.py  test_glyph_item_iter_with_context.py  test_glyph_item_with_context.py  test_item.py  test_item_with_context.py  test_language.py  test_layout.py  test_layout_iter.py  test_layout_iter_with_context.py  test_layout_iterator.py  test_layout_run.py  test_layout_run_with_context.py  test_layout_with_context.py  test_rectangle.py  test_tab_array.py  test_tabarray.py  test_version.py
utils/: make_c_definitions.py  make_cdefs.py
