[tool.poetry]
name = "pangocffi"
version = "0.5.0"
description = "CFFI-based pango bindings for Python"
license = "LGPL-2.1"
authors = ["Leif Gehrmann <leifgehrmann@gmail.com>"]
readme = "README.rst"
repository = "https://github.com/leifgehrmann/pangocffi"
homepage = "https://pangocffi.readthedocs.io/en/latest/"
keywords = ['pango', 'cffi', 'binding']

[tool.poetry.dependencies]
python = "^3.5"
cffi = "^1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7"
Sphinx = "^1.8"
tox = "^3.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
