[metadata]
name = pangocffi
url = https://github.com/leifgehrmann/pangocffi
license = LGPL-2.1
license_file = LICENSE
description = CFFI-based pango bindings for Python
author = Leif Gehrmann
keywords =
  pango
  cffi
  binding
classifiers =
  Development Status :: 1 - Planning
  Intended Audience :: Developers
  Natural Language :: English
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.7
  TOPIC :: TEXT PROCESSING :: FONTS
project_urls =
  Code = https://github.com/leifgehrmann/pangocffi
  Issue tracker = https://github.com/leifgehrmann/pangocffi/issues

[options]
packages = find:
setup_requires =
  cffi >= 1.1.0
  setuptools
install_requires =
  cffi >= 1.1.0
python_requires = >= 3.7

[options.packages.find]
exclude = pangocffi._generated

[aliases]
test=pytest
