[metadata]
name = pangocffi
version = file: pangocffi/VERSION
url = https://github.com/leifgehrmann/pangocffi
license = LGPL-2.1
license_files = LICENSE
description = CFFI-based pango bindings for Python
long_description = file: README.md
long_description_content_type = text/markdown
author = Leif Gehrmann
keywords =
  pango
  cffi
  binding
classifiers =
  Development Status :: 1 - Planning
  Intended Audience :: Developers
  Natural Language :: English
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.12
  Topic :: Text Processing :: Fonts
project_urls =
  Code = https://github.com/leifgehrmann/pangocffi
  Issue tracker = https://github.com/leifgehrmann/pangocffi/issues

[options]
packages = find:
setup_requires =
  setuptools
install_requires =
  cffi >= 1.1.0
python_requires = >= 3.8

[options.package_data]
pangocffi = VERSION, *.txt

[options.packages.find]
exclude = pangocffi._generated, tests, tests.functional

[aliases]
test=pytest
